--- a/app/_locales/el/messages.json
+++ b/app/_locales/el/messages.json
@@ -5628,7 +5628,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Ταχύτερη και εξειδικευμένη υποστήριξη, οποιαδήποτε στιγμή"
+    "message": "Ταχύτερη και εξειδικευμένη υποστήριξη, οποιαδήποτε στιγμή",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Υποστήριξη με προτεραιότητα"
@@ -5662,9 +5663,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Υποβολή αξίωσης"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "Δείτε όλα τα προνόμια"
   },
   "show": {
     "message": "Εμφάνιση"
