--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6430,19 +6430,62 @@
     "message": "Your plan isn't active while paused. If you cancel, your plan will immediately end."
   },
   "shieldTxDetails1Description": {
-    "message": "Secures assets on covered transactions"
+    "message": "$1/$2",
+    "description": "The $1 is the price of the plan and the $2 is the interval of plan"
+  },
+  "shieldTxDetails1DescriptionTrial": {
+    "message": "Free for $1 days, then $2",
+    "description": "The $1 is the number of days and the $2 is the price of the plan"
   },
   "shieldTxDetails1Title": {
-    "message": "Up to $10,000 transaction protection"
+    "message": "MetaMask Transaction Shield"
   },
   "shieldTxDetails2Description": {
-    "message": "Get faster, dedicated support anytime"
+    "message": "$1, next billing on $2",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
-    "message": "Priority support"
+    "message": "Plan type"
+  },
+  "shieldTxDetails3DescriptionCrypto": {
+    "message": "Crypto ($1), $2",
+    "description": "The $1 is the token symbol and the $2 is the account number"
+  },
+  "shieldTxDetails3Title": {
+    "message": "Payment method"
+  },
+  "shieldTxDetailsManage": {
+    "message": "Manage"
+  },
+  "shieldTxDetailsTitle": {
+    "message": "Plan details"
   },
   "shieldTxMembershipActive": {
     "message": "Active plan"
+  },
+  "shieldTxMembershipBenefits": {
+    "message": "Your benefits"
+  },
+  "shieldTxMembershipBenefits1Description": {
+    "message": "Secures assets on covered transactions"
+  },
+  "shieldTxMembershipBenefits1Title": {
+    "message": "Up to $10,000 transaction protection"
+  },
+  "shieldTxMembershipBenefits2Description": {
+    "message": "Get faster, dedicated support anytime"
+  },
+  "shieldTxMembershipBenefits2Title": {
+    "message": "Priority support"
+  },
+  "shieldTxMembershipBenefits3Description": {
+    "message": "Get 1,000 points/month"
+  },
+  "shieldTxMembershipBenefits3Title": {
+    "message": "Earn during rewards season"
+  },
+  "shieldTxMembershipBenefitsViewAll": {
+    "message": "View all"
   },
   "shieldTxMembershipBillingDetails": {
     "message": "Billing details"
@@ -6512,7 +6555,7 @@
     "description": "The $1 is the number of days left"
   },
   "shieldTxMembershipId": {
-    "message": "Plan ID"
+    "message": "Member ID"
   },
   "shieldTxMembershipInactive": {
     "message": "Inactive plan"
@@ -6528,9 +6571,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Submit a claim"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "View full benefits"
   },
   "show": {
     "message": "Show"
