--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -5628,7 +5628,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Accede a soporte más rápido y dedicado en cualquier momento"
+    "message": "Accede a soporte más rápido y dedicado en cualquier momento",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Soporte prioritario"
@@ -5662,9 +5663,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Presentar una reclamación"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "Ver todos los beneficios"
   },
   "show": {
     "message": "Mostrar"
