--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -5628,7 +5628,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Bénéficiez d’une assistance dédiée plus rapide à tout moment"
+    "message": "Bénéficiez d’une assistance dédiée plus rapide à tout moment",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Assistance prioritaire"
@@ -5662,9 +5663,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Soumettre une réclamation"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "Voir tous les avantages"
   },
   "show": {
     "message": "Afficher"
