--- a/app/_locales/pt/messages.json
+++ b/app/_locales/pt/messages.json
@@ -5628,7 +5628,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Receba suporte mais rápido e dedicado a qualquer momento"
+    "message": "Receba suporte mais rápido e dedicado a qualquer momento",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Suporte prioritário"
@@ -5662,9 +5663,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Enviar uma reclamação"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "Ver todos os benefícios"
   },
   "show": {
     "message": "Mostrar"
