--- a/app/_locales/tl/messages.json
+++ b/app/_locales/tl/messages.json
@@ -5628,7 +5628,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Tumanggap ng mas mabilis at dedikadong suporta anumang oras"
+    "message": "Tumanggap ng mas mabilis at dedikadong suporta anumang oras",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Suporta para sa priority"
@@ -5662,9 +5663,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Magsumite ng claim"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "Tingnan ang mga kumpletong benepisyo"
   },
   "show": {
     "message": "Ipakita"
