--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -5628,7 +5628,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Her zaman daha hızlı, özel destek alın"
+    "message": "Her zaman daha hızlı, özel destek alın",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Öncelikli destek"
@@ -5662,9 +5663,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "Bir talep gönder"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "Tüm faydaları görüntüle"
   },
   "show": {
     "message": "Göster"
