--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -5625,7 +5625,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "随时获取更快捷的专属支持"
+    "message": "随时获取更快捷的专属支持",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "优先支持"
@@ -5659,9 +5660,6 @@
   },
   "shieldTxMembershipSubmitCase": {
     "message": "提交索赔"
-  },
-  "shieldTxMembershipViewFullBenefits": {
-    "message": "查看完整权益"
   },
   "show": {
     "message": "显示"
