--- a/app/_locales/tl/messages.json
+++ b/app/_locales/tl/messages.json
@@ -2573,7 +2573,8 @@
     "message": "Nakalimutan ang iyong password?"
   },
   "forgotPasswordSocialDescription": {
-    "message": "Hindi mababawi ng MetaMask ang password mo para sa iyo."
+    "message": "Hindi mababawi ng MetaMask ang password mo para sa iyo.",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "Kung naka-log in ka sa MetaMask sa device na may $1 (tulad ng Face ID), maaari mong i-reset ang iyong password doon.",
@@ -4960,12 +4961,6 @@
   "rateIncludesMMFee": {
     "message": "Kasama ang $1% na bayad sa MM."
   },
-  "reAddAccounts": {
-    "message": "idagdag muli ang anumang ibang mga account"
-  },
-  "reAdded": {
-    "message": "idagdag muli"
-  },
   "readdToken": {
     "message": "Puwede mong ibalik ang token na ito sa hinaharap sa pamamagitan ng pagpunta sa “Mag-import ng token” sa menu ng mga opsyon sa iyong account."
   },
@@ -5122,33 +5117,6 @@
   },
   "resetWallet": {
     "message": "I-reset ang iyong wallet"
-  },
-  "resetWalletSubHeader": {
-    "message": "Hindi nagpapanatili ang MetaMask ng kopya ng iyong password. Kung nagkakaproblema ka sa pag-unlock ng iyong account, kakailanganin mong i-reset ang iyong wallet. Magagawa mo ito sa pamamagitan ng pagbibigay ng Lihim na Parirala sa Pagbawi na ginamit mo noong mag-set up ka ng iyong wallet."
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "Hindi nagpapanatili ang MetaMask ng kopya ng iyong password. Kung nagkakaproblema ka sa pag-unlock ng iyong account, kakailanganin mong i-reset ang iyong wallet. Kung mayroon kang Lihim na Parirala sa Pagbawi, maaari mo itong gamitin para burahin ang iyong kasalukuyang wallet mula sa device na ito, kasama ang listahan ng iyong mga account."
-  },
-  "resetWalletUsingSRP": {
-    "message": "Tatanggalin ng aksyong ito mula sa iyong device ang iyong kasalukuyang wallet at Lihim na Parirala sa Pagbawi, kasama ang listahan ng mga account na isinaayos mo. Pagkatapos i-reset ang Lihim na Parirala sa Pagbawi, makikita mo ang listahan ng mga account batay sa Lihim na Parirala sa Pagbawi na ginamit mo para mag-reset. Awtomatikong kasama sa bagong listahan na ito ang mga account na may balanse. Magagawa mo ring $1 na ginawa dati. Ang mga custom account na iyong na-import ay kinakailangang $2, at ang alinmang mga custom token na idinagdag mo sa account ay kailangang $3 din."
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "Pagkatapos i-reset gamit ang Lihim na Parirala sa Pagbawi, makikita mo ang bagong listahan ng mga account. Kasama sa listahan na ito ang mga account na may balanse. Maaari mong $1 na ginawa mo dati. Ngunit kakailanganin mong magdagdag pabalik ng anumang $2 at $3 na in-import mo. "
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "idagdag pabalik ang anumang ibang mga account"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "mga custom account"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "mga custom token"
-  },
-  "resetWalletWarning": {
-    "message": "Tiyakin na ginagamit mo ang tamang Lihim na Parirala sa Pagbawi bago magpatuloy. Hindi mo na ito maaaring bawiin."
-  },
-  "resetWalletWarningSocial": {
-    "message": "Siguraduhin na tamang Lihim na Parirala sa Pagbawi ang ginagamit mo bago ka mag-reset. Hindi ito maaaring bawiin."
   },
   "resolutionProtocol": {
     "message": "Naayos ang address gamit ang $1",
