--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -2573,7 +2573,8 @@
     "message": "Passwort vergessen?"
   },
   "forgotPasswordSocialDescription": {
-    "message": "MetaMask kann Ihr Passwort nicht für Sie wiederherstellen."
+    "message": "MetaMask kann Ihr Passwort nicht für Sie wiederherstellen.",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "Wenn Sie auf einem Gerät mit $1 (wie Face ID) bei MetaMask angemeldet sind, können Sie dort Ihr Passwort zurücksetzen.",
@@ -4960,12 +4961,6 @@
   "rateIncludesMMFee": {
     "message": "Beinhaltet $1 % MM-Gebühr."
   },
-  "reAddAccounts": {
-    "message": "Andere Konten erneut hinzufügen"
-  },
-  "reAdded": {
-    "message": "Erneut hinzugefügt"
-  },
   "readdToken": {
     "message": "Sie können diese Token immer erneut hinzufügen, indem Sie in den Menüpunkt „Token hinzufügen“ in den Einstellungen Ihres Kontos gehen."
   },
@@ -5122,33 +5117,6 @@
   },
   "resetWallet": {
     "message": "Ihre Wallet zurücksetzen"
-  },
-  "resetWalletSubHeader": {
-    "message": "MetaMask speichert keine Kopie Ihres Passwortes. Wenn Sie Probleme dabei haben, Ihr Konto zu entsperren, müssen Sie Ihr Wallet zurücksetzen. Dies können Sie tun, indem Sie die geheime Wiederherstellungsphrase eingeben, die Sie verwendet haben, als Sie Ihr Wallet eingerichtet haben."
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "MetaMask speichert keine Kopie Ihres Passworts. Wenn Sie Probleme beim Entsperren Ihres Kontos haben, müssen Sie Ihre Wallet zurücksetzen. Wenn Sie über eine geheime Wiederherstellungsphrase verfügen, können Sie damit Ihre aktuelle Wallet zusammen mit der Liste Ihrer Konten von diesem Gerät löschen."
-  },
-  "resetWalletUsingSRP": {
-    "message": "Diese Aktion wird Ihre aktuelles Wallet und die geheime Wiederherstellungsphrase von diesem Gerät löschen, zusammen mit der Liste der von Ihnen betreuten Konten. Nachdem Sie Ihr Wallet mit einer geheimen Wiederherstellungsphrase zurückgesetzt haben, sehen Sie eine Liste von Konten, die auf der verwendeten geheimen Wiederherstellungsphrase basiert. Diese Liste umfasst automatisch Konten, die Guthaben aufweisen. Sie können außerdem vorher erstellte $1. Benutzerdefinierte von Ihnen importierte Konten müssen $2 sein und benutzerdefinierte Token, die Sie einem Konto hinzugefügt haben, müssen ebenfalls $3 sein."
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "Nach dem Zurücksetzen mit einer geheimen Wiederherstellungsphrase wird eine neue Liste mit Konten angezeigt. Diese Liste enthält Konten mit einem Guthaben. Sie können $1, die Sie zuvor gemacht haben. Sie müssen jedoch alle importierten $2 und $3 wieder hinzufügen. "
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "alle anderen Konten wieder erneut hinzufügen"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "Benutzerdefinierte Konten"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "benutzerdefinierte Token"
-  },
-  "resetWalletWarning": {
-    "message": "Gehen Sie vor dem Fortfahren auf Nummer sicher, dass Sie die korrekte geheime Wiederherstellungsphrase verwenden. Sie können dies nicht rückgängig machen."
-  },
-  "resetWalletWarningSocial": {
-    "message": "Stellen Sie sicher, dass Sie vor dem Zurücksetzen die richtige geheime Wiederherstellungsphrase verwenden. Dies kann nicht rückgängig gemacht werden."
   },
   "resolutionProtocol": {
     "message": "Adresse aufgelöst über $1",
