--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -2573,7 +2573,8 @@
     "message": "Забыли пароль?"
   },
   "forgotPasswordSocialDescription": {
-    "message": "MetaMask не сможет восстановить ваш пароль для вас."
+    "message": "MetaMask не сможет восстановить ваш пароль для вас.",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "Если вы вошли в MetaMask на устройстве с $1 (например, Face ID), вы можете сбросить пароль нем.",
@@ -4960,12 +4961,6 @@
   "rateIncludesMMFee": {
     "message": "Включает $1% комиссии MM."
   },
-  "reAddAccounts": {
-    "message": "повторно добавить любые другие счета"
-  },
-  "reAdded": {
-    "message": "добавлены повторно"
-  },
   "readdToken": {
     "message": "Вы можете снова добавить этот токен в будущем, выбрав «Импорт токена» в меню параметров вашего счета."
   },
@@ -5122,33 +5117,6 @@
   },
   "resetWallet": {
     "message": "Сбросьте свой кошелек"
-  },
-  "resetWalletSubHeader": {
-    "message": "MetaMask не хранит копию вашего пароля. При возникновении трудностей с разблокировкой счета следует сбросить кошелек. Это можно сделать с помощью секретной фразы для восстановления, использованной при создании кошелька."
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "MetaMask не сохраняет копию вашего пароля. Если у вас возникли проблемы с разблокировкой счета, вам необходимо сбросить кошелек. Если у вас есть секретная фраза для восстановления, вы можете использовать её, чтобы удалить текущий кошелёк с этого устройства вместе со списком своих счетов."
-  },
-  "resetWalletUsingSRP": {
-    "message": "Этим действием вы удаляете имеющийся кошелек и секретную фразу для восстановления с этого устройства, а также список курируемых вами счетов. После сброса секретной фразы для восстановления вы увидите список счетов, связанных с секретной фразой для восстановления, использованной для сброса. Этот новый список будет автоматически включать счета, имеющие баланс. Также вы сможете $1, созданные ранее. Импортированные индивидуализированные счета должны быть $2, любые индивидуализированные токены должны быть тоже $3."
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "После сброса настроек с помощью секретной фразы для восстановления вы увидите новый список счетов. В нём будут счета с балансом. Вы можете вернуть $1, заработанный ранее. Но вам нужно будет вернуть импортированные $2 и $3. "
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "повторно добавьте любые другие счета"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "пользовательские счета"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "пользовательские токены"
-  },
-  "resetWalletWarning": {
-    "message": "Перед тем, как продолжить, убедитесь в использовании правильной секретной фразы для восстановления. Действие отмене не подлежит."
-  },
-  "resetWalletWarningSocial": {
-    "message": "Перед сбросом настроек убедитесь, что вы используете правильную секретную фразу для восстановления. Это действие нельзя будет отменить."
   },
   "resolutionProtocol": {
     "message": "Адрес решен через $1",
