--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -8107,7 +8107,8 @@
     "message": "Daily resource"
   },
   "tronDailyResourcesDescription": {
-    "message": "This is your daily allowance based on your staked TRX. You get 600 bandwidth for free daily."
+    "message": "This is your daily allowance based on your staked TRX. You get $1 bandwidth for free daily.",
+    "description": "$1 is the maximum bandwidth value"
   },
   "tronEnergy": {
     "message": "Energy"
