--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6373,12 +6373,11 @@
     "message": "24/7 access to priority live chat support"
   },
   "shieldPlanDetailsRewards": {
-    "message": "$1 points/$2",
+    "message": "Earn $1 points per $2",
     "description": "The $1 is the number of points and $2 plan interval (month or year)"
   },
   "shieldPlanDetailsRewardsDescription": {
-    "message": "You will earn $1 with Rewards. Sign up to Rewards and claim your points during the Rewards Season.",
-    "description": "The $1 is the number of points"
+    "message": "This offer is only available during active Rewards seasons. Rewards members will receive points after their free trial ends."
   },
   "shieldPlanErrorText": {
     "message": "Couldn’t connect to Transaction Shield"
