feat: add rewards sign-up on settings

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6438,6 +6438,16 @@
   "shieldTxDetails2Title": {
     "message": "Priority support"
   },
+  "shieldTxDetails3Description": {
+    "message": "Get $1 points/$2. $3",
+    "description": "The $1 is the number of points, $2 is the plan interval (month or year), $3 sign-up link"
+  },
+  "shieldTxDetails3DescriptionSignUp": {
+    "message": "Sign up now"
+  },
+  "shieldTxDetails3Title": {
+    "message": "Earn during rewards season"
+  },
   "shieldTxMembershipActive": {
     "message": "Active plan"
   },
