--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6379,6 +6379,9 @@
   "shieldPlanDetailsRewardsDescription": {
     "message": "This offer is only available during active Rewards seasons. Rewards members will receive points after their free trial ends."
   },
+  "shieldPlanDetailsRewardsTitle": {
+    "message": "Rewards"
+  },
   "shieldPlanErrorText": {
     "message": "Couldn’t connect to Transaction Shield"
   },
