--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6100,8 +6100,17 @@
   "shieldClaimGroupActive": {
     "message": "Active claims"
   },
+  "shieldClaimGroupActiveNote": {
+    "message": "Note: You can have a maximum of 3 active claims at a single time."
+  },
   "shieldClaimGroupCompleted": {
     "message": "Completed claims"
+  },
+  "shieldClaimGroupNoCompletedClaims": {
+    "message": "No completed claims"
+  },
+  "shieldClaimGroupNoCompletedClaimsDescription": {
+    "message": "Track your completed claims here."
   },
   "shieldClaimGroupNoOpenClaims": {
     "message": "No open claims"
