--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -2723,7 +2723,7 @@
     "message": "Import wallet"
   },
   "forgotPasswordModalButtonLink": {
-    "message": "I don’t know my phrase"
+    "message": "I don’t know my Phrase"
   },
   "forgotPasswordModalContactSupport": {
     "message": "$1 if you need help.",
