--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6449,11 +6449,11 @@
     "message": "Priority support"
   },
   "shieldTxDetails3Description": {
-    "message": "Get $1 points/$2. $3",
-    "description": "The $1 is the number of points, $2 is the plan interval (month or year), $3 sign-up link"
+    "message": "Get $1 points/$2.",
+    "description": "The $1 is the number of points, $2 is the plan interval (month or year)"
   },
   "shieldTxDetails3DescriptionSignUp": {
-    "message": "Sign up now"
+    "message": "Sign up"
   },
   "shieldTxDetails3Title": {
     "message": "Earn during rewards season"
