--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6377,7 +6377,7 @@
     "description": "The $1 is the number of points and $2 plan interval (month or year)"
   },
   "shieldPlanDetailsRewardsDescription": {
-    "message": "This offer is only available during active Rewards seasons. Rewards members will receive points after their free trial ends."
+    "message": "This offer is only available during active Rewards seasons. Points are issued once free trial ends for users signed up for Rewards."
   },
   "shieldPlanDetailsRewardsTitle": {
     "message": "Rewards"
