--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1043,7 +1043,7 @@
     "message": "Your quote timed out."
   },
   "bridgeSelectDestinationAccount": {
-    "message": "Select destination account"
+    "message": "Select a destination account"
   },
   "bridgeSelectDifferentQuote": {
     "message": "Please select a different quote."
