feat: add shield rewards modal (#38379)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**
- adds reward points details on shield plan
- adds shield reward points modal

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/38379?quickstart=1)

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry: adds shield rewards modal

## **Related issues**

Fixes:

## **Manual testing steps**

1. Login to MetaMask with an account without shield subscription
2. Go to Menu > Settings : click on Transaction Shield
3. Shows Shield Entry modal: click on get started
4. Redirects to Shield plan form
5. Observe what you get list
6. Click on Rewards detail
7. Shows Rewards modal

## **Screenshots/Recordings**

<!-- If applicable, add screenshots and/or recordings to visualize the
before and after of your change. -->

### **Before**

<!-- [screenshots/recordings] -->

### **After**
<img width="372" height="454" alt="Screenshot 2025-12-04 at 12 12 22 AM"
src="https://github.com/user-attachments/assets/846898e2-7d1c-4aef-9caf-86cf7a4ace9c"
/>

<img width="579" height="21

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6370,6 +6370,16 @@
   "shieldPlanDetails3": {
     "message": "24/7 access to priority live chat support"
   },
+  "shieldPlanDetailsRewards": {
+    "message": "Earn $1 points per $2",
+    "description": "The $1 is the number of points and $2 plan interval (month or year)"
+  },
+  "shieldPlanDetailsRewardsDescription": {
+    "message": "This offer is only available during Rewards seasons. Points are given when free trial ends to users signed up for Rewards."
+  },
+  "shieldPlanDetailsRewardsTitle": {
+    "message": "Rewards"
+  },
   "shieldPlanErrorText": {
     "message": "Couldn’t connect to Transaction Shield"
   },
@@ -6435,6 +6445,16 @@
   },
   "shieldTxDetails2Title": {
     "message": "Priority support"
+  },
+  "shieldTxDetails3Description": {
+    "message": "Get $1 points/$2.",
+    "description": "The $1 is the number of points, $2 is the plan interval (month or year)"
+  },
+  "shieldTxDetails3DescriptionSignUp": {
+    "message": "Sign up"
+  },
+  "shieldTxDetails3Title": {
+    "message": "Earn during rewards season"
   },
   "shieldTxMembershipActive": {
     "message": "Active plan"
