--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -6450,6 +6450,9 @@
     "message": "Get $1 points/$2.",
     "description": "The $1 is the number of points, $2 is the plan interval (month or year)"
   },
+  "shieldTxDetails3DescriptionLinkReward": {
+    "message": "Link Rewards"
+  },
   "shieldTxDetails3DescriptionSignUp": {
     "message": "Sign up"
   },
